# controller

./: .devcontainer.json  .dockerignore  .gitignore  .gitmodules  INSTALL.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  nrp_simulation_config_nest_singularity.json  pyproject.toml
.github/workflows/: build-hpc.yaml  ci.yml  publish-minjerk.yml  training-ci.yml
cerebellum_configurations/: forward.yaml  inverse.yaml
complete_control/config/: connection_params.py  core_models.py  module_params.py  population_params.py
complete_control/neural/: CerebellumHandler.py  CerebellumHandlerPopulations.py  population_utils.py
complete_control/utils_common/: draw_schema.py
docker/: Dockerfile  constraints.txt  entrypoint.sh  requirements_nrp.txt
neurocontroller/artifacts/m1/: config.yaml  convergence_failure.json  trained_weights.npz  training_loss.npy
notebooks/: 01_run_trial.ipynb  02_visualize_results.ipynb
scripts/hpc/: sim.def  sim.slurm
scripts/utilities/: build_and_export.sh  generate_signals.sh
src/neurocontroller/: __init__.py  artifacts.py  neural_simulation_lib.py  nrp_bullet_engine.py  nrp_neural_engine.py  nrp_start_sim.py  plot_from_run.py  run_trials.py
src/neurocontroller/artifacts/m1/: mean_firing_rate.json
src/neurocontroller/artifacts/pfc_planner/: trained_gle_planner.pth
src/neurocontroller/config/: MasterParams.py  ResultMeta.py  bsb_models.py  connection_params.py  core_models.py  module_params.py  nrp_sim_config.py  paths.py  plant_config.py
src/neurocontroller/deprecated/: data_handling.py  motor_commands.txt  new_params.json  reference_state_n.gdf  reference_state_p.gdf  trajectory.txt
src/neurocontroller/neural/: Cerebellum.py  CerebellumHandler.py  CerebellumHandlerPopulations.py  CerebellumPopulations.py  Controller.py  ControllerPopulations.py  data_handling.py  motorcortex.py  nest_adapter.py  neural_models.py  plot_utils.py  population_utils.py  population_view.py  result_models.py  stateestimator.py
src/neurocontroller/plant/: plant_models.py  plant_plotting.py  plant_simulator.py  robotic_plant.py  sensoryneuron.py
src/neurocontroller/shared/minjerk/: README.md  pyproject.toml
src/neurocontroller/utils_common/: custom_types.py  draw_schema.py  draw_schema_svg.py  generate_signals.py  generate_signals_gle.py  generate_signals_minjerk.py  log.py  results.py  utils.py
tests/tests_plasticity/: test_Aminus_alpha.py  test_Aminus_sinexp.py  test_Aplus_alpha.py  test_Aplus_sinexp.py  test_complex_Gr_spike_alpha.py  test_complex_Gr_spike_sinexp.py  test_general_alpha.py  test_general_sinexp.py  test_kernel_alpha.py  test_kernel_sinexp.py  test_null_parameters_alpha.py  test_null_parameters_sinexp.py  test_offset_encoding_alpha.py  test_offset_encoding_sinexp.py  test_silent_GrC_alpha.py  test_silent_GrC_sinexp.py  test_simple_Gr_spike_alpha.py  test_simple_Gr_spike_sinexp.py
tests/training/: test_run_trial.py  test_train_m1.py  test_train_planner.py
tests_POCs/: check_weight_ev.py  load_plant_data_example.py  load_population_data_example.py  manual_anim.py  state_testing.py
